src/test/data/highlighting/one_type_instructions.tz
parameter string;
return string;
storage unit;
code { <error descr="Type argument expected">EMPTY_SET</error>; # all commands expect a single type argument, which is missing here
    <error descr="Type argument expected">LEFT</error>;
    <error descr="Type argument expected">NIL</error>;
    <error descr="Type argument expected">NONE</error>;
    <error descr="Type argument expected">RIGHT</error>;

    <error descr="Type argument expected">EMPTY_SET</error><error descr="expected ';'"> </error>DROP; # all commands expect a single type argument, but a an instruction is provided
    <error descr="Type argument expected">LEFT</error><error descr="expected ';'"> </error>DROP;
    <error descr="Type argument expected">NIL</error><error descr="expected ';'"> </error>DROP;
    <error descr="Type argument expected">NONE</error><error descr="expected ';'"> </error>DROP;
    <error descr="Type argument expected">RIGHT</error><error descr="expected ';'"> </error>DROP;

    # all these commands expect a single type argument, but data is passed as argument
    EMPTY_SET (Pair <error descr="Unexpected token">int</error> int<error descr="'(' or '{' expected, got ')'">)</error>;
    LEFT (Pair <error descr="Unexpected token">int</error> int<error descr="'(' or '{' expected, got ')'">)</error>;
    NIL (Pair <error descr="Unexpected token">int</error> int<error descr="'(' or '{' expected, got ')'">)</error>;
    NONE (Pair <error descr="Unexpected token">int</error> int<error descr="'(' or '{' expected, got ')'">)</error>;
    RIGHT (Pair <error descr="Unexpected token">int</error> int<error descr="'(' or '{' expected, got ')'">)</error>;

    <error descr="Type argument expected">EMPTY_SET</error> 123;
    <error descr="Type argument expected">LEFT</error> 123;
    <error descr="Type argument expected">NIL</error> 123;
    <error descr="Type argument expected">NONE</error> 123;
    <error descr="Type argument expected">RIGHT</error> 123;

    <error descr="Type argument expected">EMPTY_SET</error> { DROP; }; # all commands expect a single type argument, but an instruction block is passed as argument
    <error descr="Type argument expected">LEFT</error> { DROP; };
    <error descr="Type argument expected">NIL</error> { DROP; };
    <error descr="Type argument expected">NONE</error> { DROP; };
    <error descr="Type argument expected">RIGHT</error> { DROP; };
};
